// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties components/profile/team/TransferToSupervisorDialog isOpen=false 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/profile/team/TransferToSupervisorDialog
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          isOpen=false
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div />
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
            }
          }
        >
          Search for “tes” to test
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            TransferToSupervisorDialog
            " Component
          </h2>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  isOpen
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  primaryButtonClick
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    primaryButtonClick
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  secondaryButtonClick
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    secondaryButtonClick
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  closeButtonClick
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    closeButtonClick
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onEnter
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onExit
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onOpened
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onClosed
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  zIndex
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    1000
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  profile
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  yes
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/profile/team/TransferToSupervisorDialog isOpen=true 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/profile/team/TransferToSupervisorDialog
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          isOpen=true
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div>
      <portal-dummy>
        <div
          className=""
        >
          <div
            className="modal fade"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="dialog"
            style={
              Object {
                "display": "block",
              }
            }
            tabIndex="-1"
          >
            <div
              className="modal-dialog modal-dialog-centered"
              role="document"
            >
              <div
                className="modal-content"
              >
                <div
                  className="modal-header"
                >
                  <h5
                    className="modal-title"
                  >
                    en_CA: Transfer a team member to a new Supervisor
                  </h5>
                  <button
                    className="close"
                    onClick={[Function]}
                  >
                    ×
                  </button>
                </div>
                <div
                  className="modal-body"
                >
                  <div
                    className="sc-fjdhpX bxNSej"
                  >
                    <h1>
                      en_CA: Choose a new Supervisor for this team member
                    </h1>
                    <img
                      alt="en_CA: en_CA: %1$s avatar"
                      className="avatar rounded-circle avatar-lg"
                      src="1.jpg"
                      style={
                        Object {
                          "marginLeft": "10px",
                        }
                      }
                    />
                    <div
                      className="sc-jzJRlG iwgXfC"
                    >
                      Mark Phillips
                    </div>
                    Job Title Here
                  </div>
                  <div>
                    <div
                      className="input-group"
                    >
                      <input
                        aria-label="en_CA: Search for a new supervisor"
                        className="form-control"
                        onChange={[Function]}
                        placeholder="en_CA: Search for a new supervisor"
                        type="text"
                        value=""
                      />
                      <div
                        className="input-group-append"
                      >
                        <span
                          className="input-group-text"
                        >
                          SearchIcon
                        </span>
                      </div>
                    </div>
                    <ul
                      className="list-group sc-bxivhb jaNiSx"
                    />
                  </div>
                </div>
                <div
                  className="modal-footer"
                >
                  <button
                    aria-label={null}
                    className="btn btn-primary disabled"
                    disabled={true}
                    onClick={[Function]}
                    type="button"
                  >
                    en_CA: Transfer
                  </button>
                  <button
                    aria-label={null}
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    en_CA: Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="modal-backdrop fade"
          />
        </div>
      </portal-dummy>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
            }
          }
        >
          Search for “tes” to test
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            TransferToSupervisorDialog
            " Component
          </h2>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  isOpen
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  primaryButtonClick
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    primaryButtonClick
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  secondaryButtonClick
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    secondaryButtonClick
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  closeButtonClick
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    closeButtonClick
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onEnter
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onExit
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onOpened
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onClosed
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  zIndex
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    1000
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  profile
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  yes
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/profile/team/TransferToSupervisorDialog with click handlers 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/profile/team/TransferToSupervisorDialog
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with click handlers
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div>
      <portal-dummy>
        <div
          className=""
        >
          <div
            className="modal fade"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="dialog"
            style={
              Object {
                "display": "block",
              }
            }
            tabIndex="-1"
          >
            <div
              className="modal-dialog modal-dialog-centered"
              role="document"
            >
              <div
                className="modal-content"
              >
                <div
                  className="modal-header"
                >
                  <h5
                    className="modal-title"
                  >
                    en_CA: Transfer a team member to a new Supervisor
                  </h5>
                  <button
                    className="close"
                    onClick={[Function]}
                  >
                    ×
                  </button>
                </div>
                <div
                  className="modal-body"
                >
                  <div
                    className="sc-fjdhpX bxNSej"
                  >
                    <h1>
                      en_CA: Choose a new Supervisor for this team member
                    </h1>
                    <img
                      alt="en_CA: en_CA: %1$s avatar"
                      className="avatar rounded-circle avatar-lg"
                      src="1.jpg"
                      style={
                        Object {
                          "marginLeft": "10px",
                        }
                      }
                    />
                    <div
                      className="sc-jzJRlG iwgXfC"
                    >
                      Mark Phillips
                    </div>
                    Job Title Here
                  </div>
                  <div>
                    <div
                      className="input-group"
                    >
                      <input
                        aria-label="en_CA: Search for a new supervisor"
                        className="form-control"
                        onChange={[Function]}
                        placeholder="en_CA: Search for a new supervisor"
                        type="text"
                        value=""
                      />
                      <div
                        className="input-group-append"
                      >
                        <span
                          className="input-group-text"
                        >
                          SearchIcon
                        </span>
                      </div>
                    </div>
                    <ul
                      className="list-group sc-bxivhb jaNiSx"
                    />
                  </div>
                </div>
                <div
                  className="modal-footer"
                >
                  <button
                    aria-label={null}
                    className="btn btn-primary disabled"
                    disabled={true}
                    onClick={[Function]}
                    type="button"
                  >
                    en_CA: Transfer
                  </button>
                  <button
                    aria-label={null}
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    en_CA: Cancel
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="modal-backdrop fade"
          />
        </div>
      </portal-dummy>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
            }
          }
        >
          Search for “tes” to test
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            TransferToSupervisorDialog
            " Component
          </h2>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  isOpen
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  primaryButtonClick
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    primaryButtonClick
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  secondaryButtonClick
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    secondaryButtonClick
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  closeButtonClick
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    closeButtonClick
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onEnter
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onExit
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onOpened
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onClosed
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  zIndex
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    1000
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  profile
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  yes
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
